<resources>
    <string name="app_name">FinApp</string>
    <string name="login">Авторизироваться</string>
    <string name="finance_app">FINANCE APP</string>
    <string name="show_password">показать пароль</string>
    <string name="hide_password">спрятать пароль</string>
    <string name="email">почта:</string>
    <string name="password">пароль:</string>
    <string name="new_user">Новый пользователь?</string>
    <string name="loginIn">Авторизироваться</string>
    <string name="nick">Никнейм:</string>
    <string name="phonenumber">номер телефона:</string>
    <string name="budget">Бюджет:</string>
    <string name="doublepass">повторите пароль:</string>
    <string name="terms_conditions">Принять условия использования приложения</string>
    <string name="dashboard">Главное Меню</string>
    <string name="closebutton">закрыть</string>
    <string name="price1">₽ 135.00</string>
    <string name="show_all">ПОКАЗАТЬ ВСЕ</string>
    <string name="expense">РАСХОДЫ</string>
    <string name="income">ДОХОДЫ</string>
    <string name="price2">₽ 35.00</string>
    <string name="transactions">ТРАНЗАКЦИИ</string>
    <string name="Take">Доходы</string>
    <string name="Pay">Расходы</string>
    <string name="add_income">ДОБАВИТЬ ДОХОД</string>
    <string name="accept">принять</string>
    <string name="textview">Просмотр текста</string>
    <string name="INCOME">Доход</string>
    <string name="ADD_AMOUNT">Введите сумму дохода</string>
    <string name="enter_the_amount_spent">Введите сумму расхода</string>
    <string name="add_expense">ДОБАВИТЬ РАСХОД</string>
    <string name="enter_tag">Введите тег</string>
    <string name="tag">Тег</string>
    <string name="totals_s">₽ 144</string>
    <string name="piechart">Диаграмма расходов</string>
    <string name="scan">Сканер</string>
    <string name="home">На Главную</string>
</resources>