<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradbg"
    tools:context=".Dashboard"
    tools:layout_editor_absoluteY="25dp">


    <TextView
        android:id="@+id/appTitle"
        android:layout_width="138dp"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <GridLayout
        android:id="@+id/gridLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.937">

        <TextView
            android:id="@+id/totalTextView"
            android:layout_width="205dp"
            android:layout_height="53dp"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="Общая сумма"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="0"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/total"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:gravity="center_horizontal"
            android:text="@string/totals_s"
            android:textSize="24sp"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_rowWeight="1" />


    </GridLayout>


    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="382dp"
        android:layout_height="241dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.832">

        <LinearLayout
            android:layout_width="373dp"
            android:layout_height="270dp"
            android:orientation="vertical"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="359dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <TextView
                    android:id="@+id/transactionsTextView"
                    android:layout_width="244dp"
                    android:layout_height="39dp"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:text="@string/transactions"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.56" />

                <TextView
                    android:id="@+id/showAllTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="5dp"
                    android:text="@string/show_all"
                    android:textColor="@color/white" />

            </LinearLayout>

            <ListView
                android:id="@+id/transactionsListDash"
                android:layout_width="363dp"
                android:layout_height="224dp"
                android:padding="5dp" />
        </LinearLayout>
    </GridLayout>

    <GridLayout
        android:id="@+id/gridLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/incomeTextView"
            android:layout_width="86dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/income"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="0"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/income"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="center_horizontal"
            android:text="@string/price1"
            android:textSize="15sp"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/expensesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/expense"
            android:gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="0"
            app:layout_rowWeight="1" />


        <TextView
            android:id="@+id/expense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price2"
            android:gravity="center_horizontal"
            android:textSize="15sp"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_rowWeight="1" />
    </GridLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout"
        app:layout_constraintVertical_bias="1.0">


        <Button
            android:id="@+id/takeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Take"
            android:background="@color/pink"/>

        <Button
            android:id="@+id/scanButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Сканер"
            android:background="@color/pink"/>

        <Button
            android:id="@+id/payButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Pay"
            android:background="@color/pink"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pieLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout2"
        app:layout_constraintTop_toBottomOf="@+id/appTitle">

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/pieChart"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </com.github.mikephil.charting.charts.PieChart>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>