<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradbg"
    tools:context=".DateCheck"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/appTitleT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/tranTextViewT1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.027"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.888"  />

    <LinearLayout
        android:id="@+id/tabLayoutT1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/appTitleT"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/homeTextViewT"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="На Главную"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutT1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">


        <Button
            android:id="@+id/takeButtonT1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/pink"
            android:text="Доход" />

        <Button
            android:id="@+id/payButtonT1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Расход"
            android:background="@color/pink"/>

    </LinearLayout>

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/horScrollViewT1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/dincomeTextView"
            android:layout_width="86dp"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/income"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="0"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/dincome"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:gravity="center_horizontal"
            android:text="@string/price1"
            android:textSize="15sp"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_rowWeight="1" />

        <TextView
            android:id="@+id/dexpensesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/expense"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="0"
            app:layout_rowWeight="1" />


        <TextView
            android:id="@+id/dexpense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/price2"
            android:textSize="15sp"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_row="1"
            app:layout_rowWeight="1" />
    </GridLayout>

    <LinearLayout
        android:id="@+id/horScrollViewT1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fillViewport="true"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutT1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tranTextViewT1"
        app:layout_constraintVertical_bias="0.382">

        <Button
            android:id="@+id/listViewTab1"
            android:layout_width="165dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:enabled="true"
            android:onClick="listView1"
            android:text="Все транзакции" />

        <Button
            android:id="@+id/graphViewTab1"
            android:layout_width="183dp"
            android:layout_height="61dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:enabled="false"
            android:onClick="graphView1"
            android:text="@string/piechart" />


    </LinearLayout>

    <TextView
        android:id="@+id/tranTextViewT1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="8dp"
        android:text="Транзакции на выбранном интервале"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutT1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061" />

    <ListView
        android:id="@+id/transactionsListViewT1"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:padding="5dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutT1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horScrollViewT1">

    </ListView>

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pieChartExpenses"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutT1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horScrollViewT1">

    </com.github.mikephil.charting.charts.PieChart>


    <EditText
        android:id="@+id/start1"
        android:layout_width="152dp"
        android:layout_height="49dp"
        android:layout_weight="1"
        android:ems="10"
        android:focusable="false"
        android:hint="YYYY-MM-DD"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/horScrollViewT1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tranTextViewT1"
        app:layout_constraintVertical_bias="0.184" />

    <EditText
        android:id="@+id/end1"
        android:layout_width="152dp"
        android:layout_height="49dp"
        android:layout_weight="1"
        android:ems="10"
        android:focusable="false"
        android:hint="YYYY-MM-DD"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/horScrollViewT1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.969"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tranTextViewT1"
        app:layout_constraintVertical_bias="0.184" />

    <Button
        android:id="@+id/find"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:text="Рассмотреть на интервале"
        app:layout_constraintBottom_toTopOf="@+id/horScrollViewT1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tranTextViewT1"
        app:layout_constraintVertical_bias="0.612" />


</androidx.constraintlayout.widget.ConstraintLayout>